add calendar handlers
